fix: home section automatic gap on small devices

--- a/client/src/features/Home/Home.module.css
+++ b/client/src/features/Home/Home.module.css
@@ -89,6 +89,7 @@
   }
   .mainSection {
     padding: 5vw;
+    gap: 5vw;
   }
 }
 @media (max-width: 260px) {
